tests/error/pointer_add_pointer.vbc
int main() {
    int a = 1;
    int b = 2;
    int* p = &a;
    int* q = &b;
    int* r = p + q;
    return *r;
}
